Update WebAudio layout tests to use unprefixed AudioContext.
All of the layout tests are updated to use unprefixed AudioContext and
OfflineAudioContext. Conversion was done using a script. All tests pass.

However, we still want to be able to run these tests on older browsers,
so where possible, we add a compatibility layer (in resources/compatibility.js) to
support running selected tests in browsers with prefixed AudioContext. This was
tested manually using Chrome 34.0.1847.60 beta on Linux.

BUG=

Review URL: https://codereview.chromium.org/208943004

git-svn-id: svn://svn.chromium.org/blink/trunk@169966 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/webaudio/audiobuffer.html
+++ b/LayoutTests/webaudio/audiobuffer.html
@@ -3,6 +3,7 @@
 <head>
 <script src="../resources/js-test.js"></script>
 <script src="resources/audio-testing.js"></script>
+<script src="resources/compatibility.js"></script>
 </head>
 <body>
 <script>
@@ -12,7 +13,7 @@ var sampleRate = 44100.0
 var lengthInSeconds = 2;
 var numberOfChannels = 4;
 
-var context = new webkitAudioContext();
+var context = new AudioContext();
 var buffer = context.createBuffer(numberOfChannels, sampleRate * lengthInSeconds, sampleRate);
 
 if (buffer.sampleRate === sampleRate)
