--- a/LayoutTests/webaudio/convolution-mono-mono.html
+++ b/LayoutTests/webaudio/convolution-mono-mono.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 <script src="../resources/js-test.js"></script>
 <script src="resources/convolution-testing.js"></script>
@@ -34,7 +35,7 @@ function runTest() {
     window.jsTestIsAsync = true;
         
     // Create offline audio context.
-    var context = new webkitOfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
+    var context = new OfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
 
     var squarePulse = createSquarePulseBuffer(context, pulseLengthFrames);
     var trianglePulse = createTrianglePulseBuffer(context, 2 * pulseLengthFrames);
