--- a/LayoutTests/webaudio/mediaelementaudiosourcenode-gc.html
+++ b/LayoutTests/webaudio/mediaelementaudiosourcenode-gc.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 </head>
 
@@ -19,7 +20,7 @@ function runTest() {
     }
 
     audioElement = document.createElement("audio");
-    context = new webkitOfflineAudioContext(1, 1000, 44100);
+    context = new OfflineAudioContext(1, 1000, 44100);
     source = context.createMediaElementSource(audioElement);
     audioElement = null;
     context = null;
