--- a/LayoutTests/webaudio/waveshaper.html
+++ b/LayoutTests/webaudio/waveshaper.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 <script type="text/javascript" src="resources/buffer-loader.js"></script>
 </head>
@@ -107,7 +108,7 @@ function runTest() {
     window.jsTestIsAsync = true;
         
     // Create offline audio context.
-    context = new webkitOfflineAudioContext(1, numberOfRenderFrames, sampleRate);
+    context = new OfflineAudioContext(1, numberOfRenderFrames, sampleRate);
     
     // source -> waveshaper -> destination
     var source = context.createBufferSource();
