--- a/LayoutTests/webaudio/audiobuffersource-ended.html
+++ b/LayoutTests/webaudio/audiobuffersource-ended.html
@@ -2,6 +2,7 @@
 <head>
     <script src="../resources/js-test.js"></script>
     <script src="resources/audio-testing.js"></script>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audiobuffersource-testing.js"></script>
     <script>
         var context;
@@ -16,7 +17,7 @@
 
             var sampleRate = 44100.0;
             var numberOfFrames = 32;
-            context = new webkitOfflineAudioContext(1, numberOfFrames, sampleRate);
+            context = new OfflineAudioContext(1, numberOfFrames, sampleRate);
             source = context.createBufferSource();
             source.buffer = createTestBuffer(context, numberOfFrames);
             source.connect(context.destination);
