--- a/LayoutTests/webaudio/audiobuffersource-start.html
+++ b/LayoutTests/webaudio/audiobuffersource-start.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="resources/audiobuffersource-testing.js"></script>
 <script src="../resources/js-test.js"></script>
@@ -79,7 +80,7 @@ function runTest() {
     window.jsTestIsAsync = true;
 
     // Create offline audio context.
-    var context = new webkitOfflineAudioContext(1, totalRenderLengthFrames, sampleRate);
+    var context = new OfflineAudioContext(1, totalRenderLengthFrames, sampleRate);
     buffer = createTestBuffer(context, bufferFrameLength);
 
     for (var i = 0; i < tests.length; ++i)
