--- a/LayoutTests/webaudio/audiochannelmerger-basic.html
+++ b/LayoutTests/webaudio/audiochannelmerger-basic.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 </head>
 
@@ -22,7 +23,7 @@ function runTest() {
 
     window.jsTestIsAsync = true;
 
-    var context = new webkitAudioContext();
+    var context = new AudioContext();
 
     try {
         var mergernode = context.createChannelMerger(0);
