--- a/LayoutTests/webaudio/audionode-connect-order.html
+++ b/LayoutTests/webaudio/audionode-connect-order.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 </head>
 
@@ -40,7 +41,7 @@ function runTest() {
     window.jsTestIsAsync = true;
         
     // Create offline audio context.
-    var context = new webkitOfflineAudioContext(1, sampleRate * renderLengthSeconds, sampleRate);
+    var context = new OfflineAudioContext(1, sampleRate * renderLengthSeconds, sampleRate);
     var toneBuffer = createSinWaveBuffer(context, renderLengthSeconds, 880);
     
     var bufferSource = context.createBufferSource();
