--- a/LayoutTests/webaudio/audionode.html
+++ b/LayoutTests/webaudio/audionode.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 </head>
 
