--- a/LayoutTests/webaudio/audioparam-exponentialRampToValueAtTime.html
+++ b/LayoutTests/webaudio/audioparam-exponentialRampToValueAtTime.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audio-testing.js"></script>
     <script src="resources/audioparam-testing.js"></script>
     <script src="../resources/js-test.js"></script>
