--- a/LayoutTests/webaudio/audioparam-summingjunction.html
+++ b/LayoutTests/webaudio/audioparam-summingjunction.html
@@ -7,6 +7,7 @@ and that these signals are summed, along with the AudioParams intrinsic value.
 
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="resources/mix-testing.js"></script>
 <script src="../resources/js-test.js"></script>
@@ -81,7 +82,7 @@ function runTest() {
     var sampleFrameLength = sampleRate * lengthInSeconds;
 
     // Create offline audio context.
-    context = new webkitOfflineAudioContext(1, sampleFrameLength, sampleRate);
+    context = new OfflineAudioContext(1, sampleFrameLength, sampleRate);
 
     // Create buffer used by the source which will have its gain controlled.
     var constantOneBuffer = createConstantBuffer(context, sampleFrameLength, 1);
