--- a/LayoutTests/webaudio/biquad-allpass.html
+++ b/LayoutTests/webaudio/biquad-allpass.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="../resources/js-test.js"></script>
 <script src="resources/biquad-testing.js"></script>
@@ -24,7 +25,7 @@ function runTest() {
     window.jsTestIsAsync = true;
         
     // Create offline audio context.
-    var context = new webkitOfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
+    var context = new OfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
 
     var filterParameters = [{cutoff : 0,    q : 10, gain : 1 },
                             {cutoff : 1,    q : 10, gain : 1 },
