--- a/LayoutTests/webaudio/biquad-getFrequencyResponse.html
+++ b/LayoutTests/webaudio/biquad-getFrequencyResponse.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="resources/biquad-testing.js"></script>
 <script src="../resources/js-test.js"></script>
@@ -278,7 +279,7 @@ function runTest()
 
     window.jsTestIsAsync = true;
 
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     filter = context.createBiquadFilter();
 
