--- a/LayoutTests/webaudio/convolver-setBuffer-null.html
+++ b/LayoutTests/webaudio/convolver-setBuffer-null.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="../resources/js-test.js"></script>
 </head>
@@ -21,7 +22,7 @@ function runTest()
 
     window.jsTestIsAsync = true;
 
-    var context = new webkitAudioContext();
+    var context = new AudioContext();
     var conv = context.createConvolver();
 
     conv.buffer = 0;
