--- a/LayoutTests/webaudio/decode-audio-data-basic.html
+++ b/LayoutTests/webaudio/decode-audio-data-basic.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 </head>
 <body>
@@ -15,7 +16,7 @@ if (window.testRunner) {
     
 window.jsTestIsAsync = true;
 
-var context = new webkitAudioContext();
+var context = new AudioContext();
 
 try {
     context.decodeAudioData(null, function(){}, function(){});
