--- a/LayoutTests/webaudio/delaynode.html
+++ b/LayoutTests/webaudio/delaynode.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="resources/delay-testing.js"></script>
 </head>
@@ -24,7 +25,7 @@ function runTest() {
     window.jsTestIsAsync = true;
         
     // Create offline audio context.
-    var context = new webkitOfflineAudioContext(1, sampleRate * renderLengthSeconds, sampleRate);
+    var context = new OfflineAudioContext(1, sampleRate * renderLengthSeconds, sampleRate);
     var toneBuffer = createToneBuffer(context, 20, 20 * toneLengthSeconds, sampleRate); // 20Hz tone
     
     var bufferSource = context.createBufferSource();
