--- a/LayoutTests/webaudio/distance-linear.html
+++ b/LayoutTests/webaudio/distance-linear.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audio-testing.js"></script>
     <script src="../resources/js-test.js"></script>
     <script src="resources/distance-model-testing.js"></script>
@@ -22,7 +23,7 @@
           window.jsTestIsAsync = true;
 
           // Create offline audio context.
-          context = new webkitOfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
+          context = new OfflineAudioContext(2, sampleRate * renderLengthSeconds, sampleRate);
 
           // Create temp panner to get LINEAR_DISTANCE value for testing.
           var pannerModel = context.createPanner();
