--- a/LayoutTests/webaudio/dynamicscompressor-basic.html
+++ b/LayoutTests/webaudio/dynamicscompressor-basic.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 </head>
 
@@ -24,7 +25,7 @@ function runTest() {
     
     window.jsTestIsAsync = true;
 
-    context = new webkitAudioContext();
+    context = new AudioContext();
     compressor = context.createDynamicsCompressor();
 
     try {
