--- a/LayoutTests/webaudio/mediaelementaudiosourcenode.html
+++ b/LayoutTests/webaudio/mediaelementaudiosourcenode.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 </head>
 
@@ -23,7 +24,7 @@ function runTest() {
     
     window.jsTestIsAsync = true;
 
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     audioElement = new Audio();
     mediaSource = context.createMediaElementSource(audioElement);
