--- a/LayoutTests/webaudio/note-grain-on-timing.html
+++ b/LayoutTests/webaudio/note-grain-on-timing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audio-testing.js"></script>
     <script src="resources/note-grain-on-testing.js"></script>
     <script src="../resources/js-test.js"></script>
@@ -44,7 +45,7 @@
           window.jsTestIsAsync = true;
 
           // Create offline audio context.
-          context = new webkitOfflineAudioContext(2, sampleRate * renderTime, sampleRate);
+          context = new OfflineAudioContext(2, sampleRate * renderTime, sampleRate);
 
           squarePulseBuffer = createSignalBuffer(context, function (k) { return 1 });    
 
