--- a/LayoutTests/webaudio/offlineaudiocontext-constructor.html
+++ b/LayoutTests/webaudio/offlineaudiocontext-constructor.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 </head>
 <body>
 <script>
 description("Tests the OfflineAudioContext constructor");
 
 // Make sure we don't crash when giving 0 as number of frames.
-shouldThrow("new webkitOfflineAudioContext(1, 0, 44100)");
+shouldThrow("new OfflineAudioContext(1, 0, 44100)");
 </script>
 </body>
 </html>
