--- a/LayoutTests/webaudio/oscillator-ended.html
+++ b/LayoutTests/webaudio/oscillator-ended.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script src="../resources/js-test.js"></script>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audio-testing.js"></script>
     <script src="resources/audiobuffersource-testing.js"></script>
     <script>
@@ -16,7 +17,7 @@
 
             var sampleRate = 44100.0;
             var lengthInSeconds = 0.1;
-            context = new webkitOfflineAudioContext(1, sampleRate * lengthInSeconds, sampleRate);
+            context = new OfflineAudioContext(1, sampleRate * lengthInSeconds, sampleRate);
             osc = context.createOscillator();
             osc.type = "sine"; 
             osc.connect(context.destination);
