--- a/LayoutTests/webaudio/realtimeanalyser-float-data.html
+++ b/LayoutTests/webaudio/realtimeanalyser-float-data.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="../resources/js-test.js"></script>
+    <script src="resources/compatibility.js"></script>
     <script src="resources/audio-testing.js"></script>
   </head>
 
@@ -58,7 +59,7 @@
 
           window.jsTestIsAsync = true;
 
-          context = new webkitOfflineAudioContext(1, sampleFrameLength, sampleRate);
+          context = new OfflineAudioContext(1, sampleFrameLength, sampleRate);
 
           // Use a simple linear ramp as the source.
           src = context.createBufferSource();
