--- a/LayoutTests/webaudio/scriptprocessornode-rewrap.html
+++ b/LayoutTests/webaudio/scriptprocessornode-rewrap.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src=../resources/js-test.js></script>
+<script src="resources/compatibility.js"></script>
 <script>
 var jsTestIsAsync = true;
 description("Tests re-wrapping an AudioNode sublass after its JS wrapper is deleted wraps the node as the correct subclass. A binding integrity assert will fire otherwise.");
