--- a/LayoutTests/webaudio/scriptprocessornode-upmix2-8channel-input.html
+++ b/LayoutTests/webaudio/scriptprocessornode-upmix2-8channel-input.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script type="text/javascript" src="resources/scriptprocessornode-testing.js"></script>
 </head>
