--- a/LayoutTests/webaudio/scriptprocessornode-zero-input-channels.html
+++ b/LayoutTests/webaudio/scriptprocessornode-zero-input-channels.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+<script src="resources/compatibility.js"></script>
 <script src="resources/audio-testing.js"></script>
 <script src="../resources/js-test.js"></script>
 </head>
@@ -32,7 +33,7 @@ function runTest()
 
     window.jsTestIsAsync = true;
 
-    var context = new webkitOfflineAudioContext(1, renderLengthInFrames, sampleRate);
+    var context = new OfflineAudioContext(1, renderLengthInFrames, sampleRate);
 
     var node;
 
