--- a/LayoutTests/webaudio/scriptprocessornode.html
+++ b/LayoutTests/webaudio/scriptprocessornode.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 </head>
 
@@ -84,7 +85,7 @@ function runTest() {
     window.jsTestIsAsync = true;
 
     // Create offline audio context.
-    context = new webkitOfflineAudioContext(2, renderLengthInFrames, sampleRate);
+    context = new OfflineAudioContext(2, renderLengthInFrames, sampleRate);
 
     try {
         var jsnode = context.createScriptProcessor(512, 0, 0);
