--- a/LayoutTests/webaudio/waveshaper-oversample-2x.html
+++ b/LayoutTests/webaudio/waveshaper-oversample-2x.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script src="../resources/js-test.js"></script>
+<script src="resources/compatibility.js"></script>
 <script type="text/javascript" src="resources/audio-testing.js"></script>
 <script type="text/javascript" src="resources/mix-testing.js"></script>
 <script type="text/javascript" src="resources/waveshaper-testing.js"></script>
