--- a/LayoutTests/webaudio/dom-exceptions.html
+++ b/LayoutTests/webaudio/dom-exceptions.html
@@ -35,6 +35,9 @@ function runTest() {
     // Invalid sample rate: NotSupportedError
     shouldThrow("context.createBuffer(1, 1, 1)");
     shouldThrow("context.createBuffer(1, 1, 1e6)");
+    // Check valid values from crbug.com/344375
+    shouldNotThrow("context.createBuffer(1, 1, 3000)");
+    shouldNotThrow("context.createBuffer(1, 1, 192000)");
     // Invalid number of frames: NotSupportedError
     shouldThrow("context.createBuffer(1, 0, context.sampleRate)");
     // Invalid ArrayBuffer (unspecified error)
